k8s-manifests/extra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vogelgrippe-ingress
  namespace: vogelgrippe
spec:
  rules:
    - host: vogelgrippe.kube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vogelgrippe-frontend
                port:
                  number: 80
